Populationsmodell/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-core.jar:/home/max/Desktop/Schule/Informatik/Populationsmodell
-d
/home/max/Desktop/Schule/Informatik/Populationsmodell/doc
-encoding
UTF-8
-charset
UTF-8
/home/max/Desktop/Schule/Informatik/Populationsmodell/Populationsmodell.java
<---- end of javadoc command ---->
Loading source file /home/max/Desktop/Schule/Informatik/Populationsmodell/Populationsmodell.java...
/home/max/Desktop/Schule/Informatik/Populationsmodell/Populationsmodell.java:35: error: <identifier> expected
    system.out.println("");
                      ^
/home/max/Desktop/Schule/Informatik/Populationsmodell/Populationsmodell.java:35: error: illegal start of type
    system.out.println("");
                       ^
2 errors
